feat(html): add buttons to submit and reset

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     <input id="tinggi-badan" type="number">
                 </div>
                 
-                <button>Hitung BMI</button>
-                <button>Reset</button>
+                <button type="submit">Hitung BMI</button>
+                <button type="reset">Reset</button>
             </form>
     
             <header>
