--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator BMI</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <main>
@@ -82,6 +82,6 @@
     </footer>
 
     <!-- script -->
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
